# -arch-pat

./: CMakeLists.txt  Makefile  go.mod  lib.cpp  sqrteq.cpp  test_sqrteq.cpp
.github/workflows/: github-actions.yml
cmd/app/: main.go
internal/com/mov/: move_handlers.go  move_test.go  pos.go
internal/command/fuel/: burn_fuel_command.go  burn_fuel_command_test.go  check_fuel_command.go  check_fuel_command_test.go
internal/command/macro/: check_burn_move_command.go  check_burn_move_command_test.go  rotation_velocity_command.go  rotation_velocity_command_test.go
internal/command/mov/: change_velocity_command.go  change_velocity_command_test.go  move.go  move_command.go  move_command_test.go  move_handlers.go  rotation.go  rotation_command.go  rotation_command_test.go
internal/entities/: unit_test.go
internal/entities/mov/: imove.go  iobj.go  move.go  rotation.go  rotation_test.go
internal/errors_handle/: err_handler.go  err_handler_test.go
internal/pkg/util/: util_test.go
tmp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
tmp/Testing/Temporary/: CTestCostData.txt
